# color-your-life

./: .envrc  Cargo.toml  README.md  flake.nix  shell.nix
src/: bool.rs  btree_map.rs  btree_set.rs  char.rs  hash_map.rs  hash_set.rs  lib.rs  primitive.rs  result.rs  slice.rs  str.rs  vec.rs  vec_deque.rs
