[package]
name = "color-your-life"
version = "0.6.0"
edition = "2021"
description = "A library to color data representations with a Display-like interface"
authors = ["Joey Ezechiels"]
rust-version = "1.62.1"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
paste = "1.0.14"
